--- a/inserircid.html
+++ b/inserircid.html
@@ -49,44 +49,45 @@
         <br/>
 
         <div class="row">
-        <div class="col-md-6">
         <center>
         <label for="s">Sinais e Sintomas</label>
         <textarea style="width:100%" name="s" name="s" id="s"></textarea>
         </center>
         </div>
 
-        <div class="col-md-6">
+        <div class="row">
         <center>
         <label for="c">Começo e Curso</label>
         <textarea style="width:100%" name="c" name="c" id="c"></textarea>
         </center>
         </div>
-        </div>
 
         <div class="row">
-        <div class="col-md-6">
+        <center>
         <label for="r">Relações epidemiológicas</label>
         <textarea style="width:100%" name="r" name="r" id="r"></textarea>
-        </div>
-
-        <div class="col-md-6">
-        <label for="i">Integração Fisiopatológica</label>
-        <textarea style="width:100%" name="i" name="i" id="i"></textarea>
-        </div>
-
+        </center>
         </div>
 
         <div class="row">
-        <div class="col-md-6">
-        <label for="p">Prognóstico</label>
-        <textarea style="width:100%" name="p" name="p" id="p"></textarea>
+        <center>
+        <label for="i">Integração Fisiopatológica</label>
+        <textarea style="width:100%" name="i" name="i" id="i"></textarea>
+        </center>
         </div>
 
-        <div class="col-md-6">
+        <div class="row">
+        <center>
+        <label for="p">Prognóstico</label>
+        <textarea style="width:100%" name="p" name="p" id="p"></textarea>
+        </center>
+        </div>
+
+        <div class="row">
+        <center>
         <label for="t">Tratamento</label>
         <textarea style="width:100%" name="t" name="t" id="t"></textarea>
-        </div>
+        </center>
         </div>
 
         <div class="row">
